# EventDrivenIoMutiplexing

./: CMakeLists.txt  README.md
document/: event_activity.uxf  event_activity_signal.uxf  read_activity.uxf  use_case_event.uxf  use_case_io.uxf  write_activity.uxf
src/: IEvent.h
src/Events/: .IEvent.h.un~  .RawEvent.h.un~  CMakeLists.txt  EventType.h  IEvent.h  IEvent.h~  RawEvent.h~  TaskBindEvent.cpp  TaskBindEvent.h
